--- a/index.html
+++ b/index.html
@@ -29,102 +29,91 @@
 
     <!-- Hero Section -->
     <div class="relative overflow-hidden rounded-2xl bg-gradient-to-br from-blue-600 to-indigo-900 text-white text-center px-5 sm:px-10 py-14 sm:py-20 shadow-2xl mb-12">
-      <div class="absolute -top-16 -right-16 w-60 h-60 bg-white/10 rounded-full hidden sm:block"></div>
-
       <span class="inline-block mb-4 px-4 py-1 rounded-full bg-white/20 text-xs sm:text-sm">KCET 2026 Update</span>
-
-      <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold leading-snug mb-5">
-        Karnataka Common Entrance Test (KCET) 2026 official dates are out!
-      </h1>
-
-      <p class="text-base sm:text-lg md:text-xl mb-7 opacity-90 max-w-3xl mx-auto">
-        Get official updates and apply only through the Karnataka Examinations Authority (KEA).
-      </p>
-
-      <a href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
-        class="inline-block bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold px-8 sm:px-10 py-3 sm:py-4 rounded-full shadow-lg transition transform hover:-translate-y-1">
+      <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold leading-snug mb-5">Karnataka Common Entrance Test (KCET) 2026 official dates are out!</h1>
+      <p class="text-base sm:text-lg md:text-xl mb-7 opacity-90 max-w-3xl mx-auto">Get official updates and apply only through the Karnataka Examinations Authority (KEA).</p>
+      <a data-official href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
+        class="official-link inline-block bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold px-8 sm:px-10 py-3 sm:py-4 rounded-full shadow-lg transition transform hover:-translate-y-1">
         Visit Official KCET Website
       </a>
     </div>
 
-    <!-- Grid Layout for Sections -->
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-
-      <!-- About -->
-      <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 hover:shadow-xl transition">
-        <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">About KCET 2026</h2>
-        <p class="mb-3 text-sm sm:text-base">
-          KCET is conducted by the Karnataka Examinations Authority (KEA) for admission into Engineering, Architecture,
-          Pharmacy, Agriculture and allied courses in Karnataka.
-        </p>
-        <p class="text-sm sm:text-base">
-          All applications, admit cards, results and counselling are available only on the official KEA portal.
-        </p>
-      </section>
-
-      <!-- Highlights -->
-      <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 hover:shadow-xl transition">
-        <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">Key Highlights</h2>
-        <ul class="list-disc pl-5 space-y-2 text-sm sm:text-base">
-          <li>Conducted by Karnataka Examinations Authority (KEA)</li>
-          <li>Online application & counselling process</li>
-          <li>Admissions for Engineering, Architecture, Pharmacy & Agriculture</li>
-        </ul>
-        <a href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
-           class="inline-block mt-4 font-semibold text-blue-600 hover:underline">
-          Check Latest Announcements →
-        </a>
-      </section>
-
-    </div>
-
-    <!-- Process (Full Width) -->
-    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 mt-10 hover:shadow-xl transition">
-      <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">Admission Process (Quick View)</h2>
-      <ol class="list-decimal pl-5 space-y-2 text-sm sm:text-base max-w-2xl">
-        <li>Apply online on KEA website</li>
-        <li>Download admit card</li>
-        <li>Attend KCET exam</li>
-        <li>Check results & rank</li>
-        <li>Participate in counselling & seat allotment</li>
-      </ol>
-      <a href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
-         class="inline-block mt-5 font-semibold text-blue-600 hover:underline">
-        Go to Official KCET Portal →
-      </a>
-    </section>
-
-    <!-- Courses -->
-    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 mt-10 hover:shadow-xl transition text-center">
-      <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">Courses Through KCET</h2>
-      <p class="font-medium text-gray-700 text-sm sm:text-base">
-        Engineering • Architecture • Pharmacy • Agriculture & Allied Sciences • Veterinary
-      </p>
+    <!-- About -->
+    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 hover:shadow-xl transition mb-10">
+      <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">About KCET 2026</h2>
+      <p class="mb-3 text-sm sm:text-base">KCET is conducted by the Karnataka Examinations Authority (KEA) for admission into Engineering, Architecture, Pharmacy, Agriculture and allied courses in Karnataka.</p>
+      <p class="text-sm sm:text-base">All applications, admit cards, results and counselling are available only on the official KEA portal.</p>
     </section>
 
     <!-- Guidance CTA -->
-    <section class="rounded-2xl p-6 sm:p-10 mt-12 bg-gradient-to-br from-indigo-50 to-indigo-100 border-l-8 border-blue-600 shadow-md flex flex-col md:flex-row items-center justify-between gap-6">
+    <section class="rounded-2xl p-6 sm:p-10 mt-6 bg-gradient-to-br from-indigo-50 to-indigo-100 border-l-8 border-blue-600 shadow-md flex flex-col md:flex-row items-center justify-between gap-6">
       <div>
         <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-3">Need Guidance?</h2>
-        <p class="mb-2 text-sm sm:text-base">
-          We provide guidance on eligibility, documents and counselling flow.
-        </p>
+        <p class="mb-2 text-sm sm:text-base">We provide guidance on eligibility, documents and counselling flow.</p>
         <p class="font-bold text-sm sm:text-base">⚠️ All applications and payments must be done only on the official KEA website.</p>
       </div>
 
-      <a href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
-        class="bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold px-8 sm:px-10 py-3 sm:py-4 rounded-full shadow-lg transition transform hover:-translate-y-1">
+      <a data-official href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
+        class="official-link bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold px-8 sm:px-10 py-3 sm:py-4 rounded-full shadow-lg transition transform hover:-translate-y-1">
         Proceed to Official KCET Website
       </a>
     </section>
 
     <!-- Footer -->
-    <footer class="text-center text-xs sm:text-sm text-gray-500 mt-14">
-      © <span class="font-semibold text-indigo-900">Admission Support Desk</span> – KCET 2026 Guidance <br />
-      All links redirect to the official Karnataka Examinations Authority (KEA) website.
-    </footer>
+    <footer class="text-center text-xs sm:text-sm text-gray-500 mt-14">© <span class="font-semibold text-indigo-900">Admission Support Desk</span> – KCET 2026 Guidance</footer>
 
   </div>
+
+  <!-- POPUP MODAL WITH GOOGLE FORM -->
+  <div id="formModal" class="fixed inset-0 bg-black/60 hidden items-center justify-center z-50">
+    <div class="bg-white rounded-xl w-full max-w-2xl p-4 relative">
+      <button id="closeModal" class="absolute top-2 right-3 text-gray-500 hover:text-gray-800">✕</button>
+
+      <h3 class="text-lg font-semibold text-center mb-3">Before proceeding, please fill this short form</h3>
+
+      <iframe
+        src="https://docs.google.com/forms/d/e/1FAIpQLSe7sk4uI8PdwkwDsdKdCYc_2_0SJaLTewER6koQjO-oSQ-xeg/viewform?embedded=true"
+        width="100%" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+      <div class="text-center mt-4">
+        <button id="confirmSubmit" class="bg-blue-600 hover:bg-blue-500 text-white px-6 py-2 rounded-lg font-semibold">I have submitted – Continue</button>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const links = document.querySelectorAll('.official-link');
+    const modal = document.getElementById('formModal');
+    const closeBtn = document.getElementById('closeModal');
+    const confirmBtn = document.getElementById('confirmSubmit');
+
+    let pendingUrl = null;
+
+    function hasSubmitted() {
+      return localStorage.getItem('kcet_form_submitted') === 'true';
+    }
+
+    links.forEach(link => {
+      link.addEventListener('click', function (e) {
+        if (!hasSubmitted()) {
+          e.preventDefault();
+          pendingUrl = this.href;
+          modal.classList.remove('hidden');
+          modal.classList.add('flex');
+        }
+      });
+    });
+
+    confirmBtn.addEventListener('click', () => {
+      localStorage.setItem('kcet_form_submitted', 'true');
+      modal.classList.add('hidden');
+      if (pendingUrl) window.open(pendingUrl, '_blank');
+    });
+
+    closeBtn.addEventListener('click', () => {
+      modal.classList.add('hidden');
+    });
+  </script>
 
 </body>
 </html>
