--- a/index.html
+++ b/index.html
@@ -30,37 +30,92 @@
     <!-- Hero Section -->
     <div class="relative overflow-hidden rounded-2xl bg-gradient-to-br from-blue-600 to-indigo-900 text-white text-center px-5 sm:px-10 py-14 sm:py-20 shadow-2xl mb-12">
       <span class="inline-block mb-4 px-4 py-1 rounded-full bg-white/20 text-xs sm:text-sm">KCET 2026 Update</span>
-      <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold leading-snug mb-5">Karnataka Common Entrance Test (KCET) 2026 official dates are out!</h1>
-      <p class="text-base sm:text-lg md:text-xl mb-7 opacity-90 max-w-3xl mx-auto">Get official updates and apply only through the Karnataka Examinations Authority (KEA).</p>
-      <a data-official href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
+
+      <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold leading-snug mb-5">
+        Karnataka Common Entrance Test (KCET) 2026 official dates are out!
+      </h1>
+
+      <p class="text-base sm:text-lg md:text-xl mb-7 opacity-90 max-w-3xl mx-auto">
+        Get official updates and apply only through the Karnataka Examinations Authority (KEA).
+      </p>
+
+      <a data-official href="https://cetonline.karnataka.gov.in/kea/"
         class="official-link inline-block bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold px-8 sm:px-10 py-3 sm:py-4 rounded-full shadow-lg transition transform hover:-translate-y-1">
         Visit Official KCET Website
       </a>
     </div>
 
     <!-- About -->
-    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 hover:shadow-xl transition mb-10">
+    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 mb-10 hover:shadow-xl transition">
       <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">About KCET 2026</h2>
-      <p class="mb-3 text-sm sm:text-base">KCET is conducted by the Karnataka Examinations Authority (KEA) for admission into Engineering, Architecture, Pharmacy, Agriculture and allied courses in Karnataka.</p>
-      <p class="text-sm sm:text-base">All applications, admit cards, results and counselling are available only on the official KEA portal.</p>
+      <p class="mb-3 text-sm sm:text-base">
+        KCET is conducted by the Karnataka Examinations Authority (KEA) for admission into Engineering, Architecture,
+        Pharmacy, Agriculture and allied courses in Karnataka.
+      </p>
+      <p class="text-sm sm:text-base">
+        All applications, admit cards, results and counselling are available only on the official KEA portal.
+      </p>
+    </section>
+
+    <!-- Highlights -->
+    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 mb-10 hover:shadow-xl transition">
+      <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">Key Highlights</h2>
+      <ul class="list-disc pl-5 space-y-2 text-sm sm:text-base">
+        <li>Conducted by Karnataka Examinations Authority (KEA)</li>
+        <li>Online application & counselling process</li>
+        <li>Admissions for Engineering, Architecture, Pharmacy & Agriculture</li>
+      </ul>
+      <a data-official href="https://cetonline.karnataka.gov.in/kea/"
+         class="official-link inline-block mt-4 font-semibold text-blue-600 hover:underline">
+        Check Latest Announcements →
+      </a>
+    </section>
+
+    <!-- Process -->
+    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 mb-10 hover:shadow-xl transition">
+      <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">Admission Process (Quick View)</h2>
+      <ol class="list-decimal pl-5 space-y-2 text-sm sm:text-base">
+        <li>Apply online on KEA website</li>
+        <li>Download admit card</li>
+        <li>Attend KCET exam</li>
+        <li>Check results & rank</li>
+        <li>Participate in counselling & seat allotment</li>
+      </ol>
+      <a data-official href="https://cetonline.karnataka.gov.in/kea/"
+         class="official-link inline-block mt-4 font-semibold text-blue-600 hover:underline">
+        Go to Official KCET Portal →
+      </a>
+    </section>
+
+    <!-- Courses -->
+    <section class="bg-white rounded-2xl shadow-md p-6 sm:p-8 mb-10 hover:shadow-xl transition text-center">
+      <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-4">Courses Through KCET</h2>
+      <p class="font-medium text-gray-700 text-sm sm:text-base">
+        Engineering • Architecture • Pharmacy • Agriculture & Allied Sciences • Veterinary
+      </p>
     </section>
 
     <!-- Guidance CTA -->
-    <section class="rounded-2xl p-6 sm:p-10 mt-6 bg-gradient-to-br from-indigo-50 to-indigo-100 border-l-8 border-blue-600 shadow-md flex flex-col md:flex-row items-center justify-between gap-6">
+    <section class="rounded-2xl p-6 sm:p-10 mb-10 bg-gradient-to-br from-indigo-50 to-indigo-100 border-l-8 border-blue-600 shadow-md flex flex-col md:flex-row items-center justify-between gap-6">
       <div>
         <h2 class="text-xl sm:text-2xl font-semibold text-indigo-900 mb-3">Need Guidance?</h2>
-        <p class="mb-2 text-sm sm:text-base">We provide guidance on eligibility, documents and counselling flow.</p>
+        <p class="mb-2 text-sm sm:text-base">
+          We provide guidance on eligibility, documents and counselling flow.
+        </p>
         <p class="font-bold text-sm sm:text-base">⚠️ All applications and payments must be done only on the official KEA website.</p>
       </div>
 
-      <a data-official href="https://cetonline.karnataka.gov.in/kea/" target="_blank"
+      <a data-official href="https://cetonline.karnataka.gov.in/kea/"
         class="official-link bg-yellow-400 hover:bg-yellow-300 text-gray-900 font-bold px-8 sm:px-10 py-3 sm:py-4 rounded-full shadow-lg transition transform hover:-translate-y-1">
         Proceed to Official KCET Website
       </a>
     </section>
 
     <!-- Footer -->
-    <footer class="text-center text-xs sm:text-sm text-gray-500 mt-14">© <span class="font-semibold text-indigo-900">Admission Support Desk</span> – KCET 2026 Guidance</footer>
+    <footer class="text-center text-xs sm:text-sm text-gray-500 mt-14">
+      © <span class="font-semibold text-indigo-900">Admission Support Desk</span> – KCET 2026 Guidance <br />
+      All links redirect to the official Karnataka Examinations Authority (KEA) website.
+    </footer>
 
   </div>
 
@@ -107,7 +162,7 @@
     confirmBtn.addEventListener('click', () => {
       localStorage.setItem('kcet_form_submitted', 'true');
       modal.classList.add('hidden');
-      if (pendingUrl) window.open(pendingUrl, '_blank');
+      if (pendingUrl) window.location.href = pendingUrl;
     });
 
     closeBtn.addEventListener('click', () => {
