removed google sheet api and used sheet app script

--- a/public/index.html
+++ b/public/index.html
@@ -153,14 +153,10 @@
           </div>
           <div class="ml-3 text-sm">
             <label for="whatsapp_consent" class="font-medium text-gray-700">
-              By submitting this form, I consent to receive transactional and promotional messages via WhatsApp from
-              Eduvert regarding its products, services, offers, and updates. I understand that my consent is voluntary
-              and that I can withdraw it at any time by replying “STOP” or contacting support.
+              I hereby agree to <a href="TermsandCondition.html" target="_blank"
+                class="text-blue-600 hover:underline">Terms and Condition</a> and <a href="Privacypolicy.html"
+                target="_blank" class="text-blue-600 hover:underline">Privacy Policy</a>.
             </label>
-            <p class="text-gray-500 text-xs mt-1">
-              We respect your privacy. Your contact information will only be used for communication related to our
-              services and will not be shared with third parties.
-            </p>
           </div>
         </div>
         <div id="formMessage" class="h-4"></div>
