--- a/public/Privacypolicy.html
+++ b/public/Privacypolicy.html
@@ -132,8 +132,7 @@
         <p>If you have any questions, concerns, or requests regarding this Privacy Policy or your personal data, you may
             contact us at:</p>
         <p><strong>Eduvert</strong><br />
-            Email: support@eduvert.in<br />
-            Phone: +91-XXXXXXXXXX</p>
+            Email: info.eduvert@gmail.com<br /></p>
 
         <h2>9. Changes to This Privacy Policy</h2>
         <p>We may update this Privacy Policy from time to time. Continued use of our website means you accept the
